Fix: hotfix - remove flickering from other buttons

--- a/src/custom/components/Referral/Button/button.pcss
+++ b/src/custom/components/Referral/Button/button.pcss
@@ -1,4 +1,4 @@
-.button {
+.button-get {
   display: inline-block;
   z-index: 200;
   font-family: IBM Plex Sans;
